# iris_decision_trees

./: .gitignore  CMakeLists.txt  README.md  main.cpp  requirements.txt  setup.py
iris_decision_tree.egg-info/: PKG-INFO  SOURCES.txt
src/: train_model.py
